# Satellite-Attitude-Controller

./: CMakeLists.txt  LQRController.cpp  README.md  ReactionWheel.cpp  ReactionWheel.hpp  Satellite.cpp  Satellite.hpp  WheelController.cpp  WheelController.hpp  main.cpp  output.csv
src/: Controller.cpp  Controller.hpp  LQRController.cpp  LQRController.hpp  ReactionWheel.cpp  ReactionWheel.hpp  Satellite.cpp  Satellite.hpp  WheelController.hpp  main.cpp
